fix(utf8) Remove the gap between nav and header
Strings not in UTF-8 coding not yet styled #156

--- a/inst/shiny/sdcApp/www/ihsn-extra-shell.css
+++ b/inst/shiny/sdcApp/www/ihsn-extra-shell.css
@@ -27,5 +27,9 @@
 #show_info_general.shiny-html-output{
   margin: 0;
 }
+
+#ui_show_changed_labels_header.shiny-html-output{
+  margin: 0;
+}
 /*
  * **/
